feat(ingestion): add MAX timestamp and row count to the watermark row (#389)
* feat(ingestion): add MAX timestamp and row count to the watermark row

The ingestion watermark carried only MIN(timestamp) per group. It now
carries MIN, MAX and COUNT(*), computed in the same write-time aggregation
and inserted in the same transaction as the file registration.

Destination columns are named explicitly and are all required:

    watermark_timestamp_column      SOURCE column; MIN and MAX read it
    watermark_min_timestamp_column  where the MIN lands
    watermark_max_timestamp_column  where the MAX lands
    watermark_row_count_column      where COUNT(*) lands

Previously the MIN's destination was implicit, reusing the source column
name; separating them keeps the source and the three destinations
distinguishable now that there is more than one aggregate.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>

* fix(ingestion): record a watermark row when all timestamps are NULL

The aggregation filtered on HAVING MIN(ts) IS NOT NULL, which dropped any
group whose timestamps were all NULL. That was harmless when MIN was the
only output, but now that the row carries COUNT(*) it silently discarded
the count for those batches — the rows were ingested and never accounted
for.

Filtering on COUNT(*) > 0 instead keeps such a group, writing NULL min and
max alongside its true row count, while still suppressing the single
all-NULL row a zero-row relation produces in global (ungrouped) mode.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>

---------

Co-authored-by: tanejgagan@yahoo.com <gtaneja@vijayshrees-mbp.lan>
Co-authored-by: Claude Opus 5 <noreply@anthropic.com>